--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,14 +5,10 @@
     <table class="table table-condensed table-bordered" id="table-user">
       <tr>
         <td>
-          <% if current_user.superior? %>
-             <%= l(@first_day,format: :middle) %> 時間管理表
-          <% else %>
-            <%= link_to "←", user_path(date: @first_day.prev_month), class: "btn btn-default" %>
-            <%= l(@first_day,format: :middle) %> 時間管理表
-            <%= link_to "→", user_path(date: @first_day.next_month), class: "btn btn-default"%>
-          <% end %>
-        </td>
+          <%= link_to "←", user_path(date: @first_day.prev_month), class: "btn btn-default" %>
+          <%= l(@first_day,format: :middle) %> 時間管理表
+          <%= link_to "→", user_path(date: @first_day.next_month), class: "btn btn-default"%>
+      </td>
         <td>
           指定勤務開始時間:<%= l(@user.basic_start, format: :time) %>
           <br>指定勤務終了時間:<%= l(@user.basic_finish, format: :time) %>
@@ -31,38 +27,42 @@
     </table>
     
       <ul class="list-unstyled">
-        <% if @user.superior? %>
-          <li>
-            <% if @this_month_request.present? %>
-              <%= link_to "【所属長承認申請のお知らせ】",months_one_month_approval_user_path(current_user),remote: true, class: "text-danger" %>
-              <span class="text-danger"><%= @this_month_request.count %>件の通知があります。</span>
-            <% else %>
-            【所属長承認申請のお知らせ】
-            <% end %>
-          </li>
-          <li>
-            <% if @attendance_edit.present? %>
-              <%= link_to "【勤怠変更申請のお知らせ】",attendances_attendance_approval_user_path(@user), remote: true, class: "text-danger" %>
-              <span class="text-danger"><%= @attendance_edit.count %>件の通知があります。</span>
-            <% else %>
-              【勤怠変更申請のお知らせ】
-            <% end %>
-          </li>
-          <li>
-            <% if @over_time.present? %>
-                <%= link_to "【残業申請のお知らせ】",attendances_over_time_approval_user_path(@user), remote: true, class: "text-danger" %>
-                <span><%= @over_time.count %>件の通知があります。</span>
-            <% else %>
-              【残業申請のお知らせ】
-            <% end %>
-          </li>
+        <% if current_user == @user %>
+          <% if @user.superior? %>
+            <li>
+              <% if @this_month_request.present? %>
+                <%= link_to "【所属長承認申請のお知らせ】",months_one_month_approval_user_path(current_user),remote: true, class: "text-danger" %>
+                <span class="text-danger"><%= @this_month_request.count %>件の通知があります。</span>
+              <% else %>
+              【所属長承認申請のお知らせ】
+              <% end %>
+            </li>
+            <li>
+              <% if @attendance_edit.present? %>
+                <%= link_to "【勤怠変更申請のお知らせ】",attendances_attendance_approval_user_path(@user), remote: true, class: "text-danger" %>
+                <span class="text-danger"><%= @attendance_edit.count %>件の通知があります。</span>
+              <% else %>
+                【勤怠変更申請のお知らせ】
+              <% end %>
+            </li>
+            <li>
+              <% if @over_time.present? %>
+                  <%= link_to "【残業申請のお知らせ】",attendances_over_time_approval_user_path(@user), remote: true, class: "text-danger" %>
+                  <span><%= @over_time.count %>件の通知があります。</span>
+              <% else %>
+                【残業申請のお知らせ】
+              <% end %>
+            </li>
+          <% end %>
         <% end %>
       </ul>
     
     <div class="btn-users-show">
-      <%= link_to "勤怠を編集", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-primary" %>
-      <%= link_to "CSV出力", user_path(format: :csv), class: "btn btn-primary" %>
-      <br><%= link_to "勤怠修正ログ (承認済み）", attendances_attendance_log_user_path(@user), class: "btn btn-primary" %>
+      <% if current_user == @user %>
+        <%= link_to "勤怠を編集", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-primary" %>
+        <%= link_to "CSV出力", user_path(format: :csv, date: @first_day), class: "btn btn-primary" %>
+        <br><%= link_to "勤怠修正ログ (承認済み）", attendances_attendance_log_user_path(@user), class: "btn btn-primary" %>
+      <% end %>
     </div>
     
     <table class="table table-bordered table-condensed table-hover" id="table-attendances">
@@ -160,10 +160,12 @@
             <% if @this_month_attendance.present? %>
               <%= @this_month_attendance.one_month_confirmation %>
             <% end %>
-            <%= form_with(model: @one_month_attendance, url: user_months_path(current_user, data: @first_day), local: true, method: :post) do |f| %>
-              <%= f.collection_select(:one_month_instructor, @one_month_instructor, :name, :name, {}, {class: "form-control"}) %>
-              <br>
-              <%= f.submit "申請", class: "btn btn-primary" %>
+            <% if current_user == @user %>
+              <%= form_with(model: @one_month_attendance, url: user_months_path(current_user, data: @first_day), local: true, method: :post) do |f| %>
+                <%= f.collection_select(:one_month_instructor, @one_month_instructor, :name, :name, {}, {class: "form-control"}) %>
+                <br>
+                <%= f.submit "申請", class: "btn btn-primary" %>
+              <% end %>
             <% end %>
           </td>
         </tr>
