--- a/app/views/attendances/attendance_log.html.erb
+++ b/app/views/attendances/attendance_log.html.erb
@@ -37,9 +37,11 @@
                   <%= l(log.before_finished, format: :time) %>
                 <% end %>
               </td>
-              <td><%= l(log.after_started, format: :time) %></td>
-              <td><%= l(log.after_finished, format: :time) %></td>
-              <td><%= log.instructor %></td>
+              <% if log.after_started.present? %>
+                <td><%= l(log.after_started, format: :time) %></td>
+                <td><%= l(log.after_finished, format: :time) %></td>
+              <% end %>
+              <td><%= log.log_instructor %></td>
               <td>
                 <%= l(log.approval_day, format: :long) %>
               </td>
