--- a/app/views/months/_one_month_approval.html.erb
+++ b/app/views/months/_one_month_approval.html.erb
@@ -30,7 +30,7 @@
                           <% end %>
                         </td>
                         <td class="text-center">
-                          <%= link_to "確認", "#", class: "btn btn-primary btn-lg" %>
+                          <%= link_to "確認", user_path(User.find(id)), class: "btn btn-primary btn-lg" %>
                         </td>
                       </tr>
                     </tbody>
