--- a/app/views/bases/index.html.erb
+++ b/app/views/bases/index.html.erb
@@ -3,22 +3,24 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <table class="table table-condensed table-hover">
-     <tr>
-       <th></th>
-       <th></th>
-       <th>拠点番号</th>
-       <th>拠点名</th>
-       <th>勤怠種類</th>
-     </tr>
-     <% @bases.each do |base| %>
-         <tr>
-           <td><%= link_to "修正", edit_basis_path(base), class: "btn btn-primary", remote: true %></td>
-           <td><%= link_to "削除", basis_path(base), method: :delete, data: {confirm: "#{base.base_name}を削除しますか？"}, class: "btn btn-primary" %></td>
-           <td><%= base.base_number %></td>
-           <td><%= base.base_name %></td>
-           <td><%= base.kind %></td>
-         </tr>
-     <% end %>
+      <tr>
+        <th></th>
+        <th></th>
+        <th>拠点番号</th>
+        <th>拠点名</th>
+        <th>勤怠種類</th>
+      </tr>
+      <% if @bases.present? %>
+         <% @bases.each do |base| %>
+           <tr>
+             <td><%= link_to "修正", edit_basis_path(base), class: "btn btn-primary", remote: true %></td>
+             <td><%= link_to "削除", basis_path(base), method: :delete, data: {confirm: "#{base.base_name}を削除しますか？"}, class: "btn btn-primary" %></td>
+             <td><%= base.base_number %></td>
+             <td><%= base.base_name %></td>
+             <td><%= base.kind %></td>
+           </tr>
+         <% end %>
+      <% end %>
     </table>
     <div>
       <%= link_to "拠点情報の追加",new_basis_path, class: "btn btn-primary", remote: true %>
