--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -21,6 +21,15 @@
       
    <%= f.label :password_confirmation, class: "label-#{yield(:class_text)}" %>
    <%= f.password_field :password_confirmation, class: "form-control" %>
+   
+   <%= f.label :basic_work_time, class: "label-#{yield(:class_text)}" %>
+   <%= f.time_field :basic_work_time, class: "form-control" %>
+   
+   <%= f.label :designated_work_start_time, class: "label-#{yield(:class_text)}" %>
+   <%= f.time_field :designated_work_start_time, class: "form-control" %>
+   
+   <%= f.label :designated_work_end_time, class: "label-#{yield(:class_text)}" %>
+   <%= f.time_field :designated_work_end_time, class: "form-control" %>
       
    <%= f.submit yield(:button), class: "btn btn-block btn-primary btn-signup" %>
 <% end %>
