--- a/app/views/users/edit_basic_info.html.erb
+++ b/app/views/users/edit_basic_info.html.erb
@@ -5,14 +5,14 @@
     <%= form_with(model: @user, url: update_basic_info_user_path(@user), method: :patch, local: true) do |f| %>
       <%= render 'shared/error_message' %>
       
-      <%= f.label :basic_start, class: "label-signup" %>
-      <%= f.time_field :basic_start, class: "form-control" %>
+      <%= f.label :designated_work_start_time, class: "label-signup" %>
+      <%= f.time_field :designated_work_start_time, class: "form-control" %>
       
-      <%= f.label :basic_finish, class: "label-signup" %>
-      <%= f.time_field :basic_finish, class: "form-control" %>
+      <%= f.label :designated_work_end_time, class: "label-signup" %>
+      <%= f.time_field :designated_work_end_time, class: "form-control" %>
       
-      <%= f.label :work_time, class: "label-signup" %>
-      <%= f.time_field :work_time, class: "form-control" %>
+      <%= f.label :basic_work_time, class: "label-signup" %>
+      <%= f.time_field :basic_work_time, class: "form-control" %>
       
       <%= f.submit "編集", class: "btn btn-primary btn-block btn-signup" %>
     <% end %>
