--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,10 +10,12 @@
           <%= link_to "→", user_path(date: @first_day.next_month), class: "btn btn-default"%>
       </td>
         <td>
-          指定勤務開始時間:<%= l(@user.basic_start, format: :time) %>
-          <br>指定勤務終了時間:<%= l(@user.basic_finish, format: :time) %>
+          指定勤務開始時間:<%= l(@user.designated_work_start_time, format: :time) %>
+          <br>指定勤務終了時間:<%= l(@user.designated_work_end_time, format: :time) %>
         </td>
-        <td colspan="3" class="table-text ">基本時間</td>
+        <td colspan="3" class="table-text ">基本時間
+        <br><%= l(@user.basic_work_time, format: :time) %>
+        </td>
         <td class="table-text">初日<%= l(@first_day,format: :short) %></td>
       </tr>
       <tr class="user-table-item">
@@ -132,7 +134,7 @@
             <td></td>
             <td>
               <% if day.instructor_confirmation == "承認" %>
-                <%= working_over_time(day,day.finish_time,@user.basic_finish) %>
+                <%= working_over_time(day,day.finish_time,@user.designated_work_end_time) %>
               <% end %>
             </td>
             <td>
